made some changes

--- a/src/data/i18n/locales/en.json
+++ b/src/data/i18n/locales/en.json
@@ -248,6 +248,30 @@
     "yourProperties": "Your Properties ({{count}})",
     "manageProperties": "Manage and update all your properties",
     "welcomeToNyumbaLink": "Welcome to NyumbaLink!",
+    "step1Title": "Basic Information",
+    "step1Description": "Fill in essential property details",
+    "step2Title": "Property Details",
+    "step2Description": "Describe your property in detail",
+    "step3Title": "Property Address",
+    "step3Description": "Complete property address",
+    "step4Title": "Property Photos",
+    "step4Description": "Property photos (required)",
+    "step5Title": "Contact Information",
+    "step5Description": "Contact details",
+    "nameFilled": "Great! Name filled",
+    "locationFilled": "Location filled",
+    "descriptionFilled": "Description filled",
+    "phoneFilled": "Phone number filled",
+    "addressImportance": "Why is complete address important?",
+    "addressImportanceText": "Complete address helps tenants find you easily and increases trust in your listings.",
+    "photoTipsTitle": "Good Photo Tips",
+    "photoTip1": "• Take photos of living room, bedroom, and kitchen",
+    "photoTip2": "• Ensure adequate lighting",
+    "photoTip3": "• Show exterior surroundings",
+    "photoTip4": "• Use high quality photos",
+    "photosRequired": "⚠️ Photos are required - add at least 3 photos",
+    "contactInfoDescription": "Provide contact details so tenants can reach you",
+    "descriptionPlaceholder": "Example: This house has 3 bedrooms, large living room, modern kitchen, and 2 bathrooms. Located in a safe area with 24/7 security. Close to schools, hospitals, and markets. Has electricity, running water, and parking space. Perfect for families or professionals.",
     "noPropertiesYet": "You don't have any properties yet. Start your journey of listing properties and finding tenants.",
     "addFirstPropertyAction": "Add Your First Property",
     "viewExample": "View Example",
