--- a/src/data/i18n/locales/sw.json
+++ b/src/data/i18n/locales/sw.json
@@ -248,6 +248,54 @@
     "yourProperties": "Nyumba Zako ({{count}})",
     "manageProperties": "Simamia na usasisha nyumba zako zote",
     "welcomeToNyumbaLink": "Karibu NyumbaLink!",
+    "step1Title": "Maelezo ya Msingi",
+    "step1Description": "Jaza maelezo muhimu ya nyumba",
+    "step2Title": "Maelezo ya Nyumba",
+    "step2Description": "Elezea nyumba yako kwa undani",
+    "step3Title": "Anwani ya Nyumba",
+    "step3Description": "Anwani kamili ya nyumba",
+    "step4Title": "Picha za Nyumba",
+    "step4Description": "Picha za nyumba (za lazima)",
+    "step5Title": "Maelezo ya Mawasiliano",
+    "step5Description": "Maelezo ya mawasiliano",
+    "nameFilled": "Sawa! Jina limejazwa",
+    "locationFilled": "Eneo limejazwa",
+    "descriptionFilled": "Maelezo yamejazwa",
+    "phoneFilled": "Nambari ya simu imejazwa",
+    "addressImportance": "Kwa nini anwani kamili ni muhimu?",
+    "addressImportanceText": "Anwani kamili inasaidia wapangaji kukupata kwa urahisi na kuongeza imani katika matangazo yako.",
+    "photoTipsTitle": "Vidokezo vya Picha Nzuri",
+    "photoTip1": "• Piga picha za sebule, chumba cha kulala, na jiko",
+    "photoTip2": "• Hakikisha mwanga wa kutosha",
+    "photoTip3": "• Onyesha mazingira ya nje ya nyumba",
+    "photoTip4": "• Tumia picha za quality nzuri",
+    "photosRequired": "⚠️ Picha ni za lazima - ongeza angalau picha 3",
+    "contactInfoDescription": "Weka maelezo ya mawasiliano ili wapangaji waweze kuwasiliana nawe",
+    "descriptionPlaceholder": "Mfano: Nyumba hii ina vyumba 3 vya kulala, sebule kubwa, jiko la kisasa, na vyumba 2 vya kuogea. Iko eneo salama lenye ulinzi wa 24/7. Karibu na shule, hospitali, na soko. Ina umeme, maji ya bomba, na mahali pa kuegesha gari. Nyumba ni nzuri sana kwa familia au wafanyakazi.",
+    "step1Title": "Maelezo ya Msingi",
+    "step1Description": "Jaza maelezo muhimu ya nyumba yako",
+    "step2Title": "Maelezo ya Nyumba",
+    "step2Description": "Eleza nyumba yako kwa undani",
+    "step3Title": "Anwani ya Nyumba",
+    "step3Description": "Anwani kamili ya nyumba",
+    "step4Title": "Picha za Nyumba",
+    "step4Description": "Picha za nyumba (za lazima)",
+    "step5Title": "Maelezo ya Mawasiliano",
+    "step5Description": "Maelezo ya mawasiliano",
+    "nameFilled": "Sawa! Jina limejazwa",
+    "locationFilled": "Eneo limejazwa",
+    "descriptionFilled": "Maelezo yamejazwa",
+    "phoneFilled": "Nambari ya simu imejazwa",
+    "addressImportance": "Kwa nini anwani kamili ni muhimu?",
+    "addressImportanceText": "Anwani kamili inasaidia wapangaji kukupata kwa urahisi na kuongeza imani katika matangazo yako.",
+    "photoTipsTitle": "Vidokezo vya Picha Nzuri",
+    "photoTip1": "• Piga picha za sebule, chumba cha kulala, na jiko",
+    "photoTip2": "• Hakikisha mwanga wa kutosha",
+    "photoTip3": "• Onyesha mazingira ya nje ya nyumba",
+    "photoTip4": "• Tumia picha za quality nzuri",
+    "photosRequired": "⚠️ Picha ni za lazima - ongeza angalau picha 3",
+    "contactInfoDescription": "Weka maelezo ya mawasiliano ili wapangaji waweze kuwasiliana nawe",
+    "descriptionPlaceholder": "Mfano: Nyumba hii ina vyumba 3 vya kulala, sebule kubwa, jiko la kisasa, na vyumba 2 vya kuogea. Iko eneo salama lenye ulinzi wa 24/7. Karibu na shule, hospitali, na soko. Ina umeme, maji ya bomba, na mahali pa kuegesha gari. Nyumba ni nzuri sana kwa familia au wafanyakazi.",
     "noPropertiesYet": "Huna nyumba zozote bado. Anza safari yako ya kutangaza nyumba na kupata wapangaji.",
     "addFirstPropertyAction": "Ongeza Nyumba ya Kwanza",
     "viewExample": "Ona Mfano",
