--- a/src/data/i18n/locales/sw.json
+++ b/src/data/i18n/locales/sw.json
@@ -98,6 +98,8 @@
     "customPrice": "Bei ya Maalum",
     "minPriceLabel": "Bei ya chini (TZS)",
     "maxPriceLabel": "Bei ya juu (TZS)",
+    "minimum": "Chini (TZS)",
+    "maximum": "Juu (TZS)",
     "basicUtilities": "Huduma za Msingi",
     "electricity": "Umeme",
     "water": "Maji",
@@ -105,6 +107,8 @@
     "school": "Shule",
     "hospital": "Hospitali",
     "market": "Soko",
+    "bank": "Benki",
+    "transport": "Usafiri",
     "sortBy": "Panga Kwa",
     "newest": "Mpya zaidi",
     "priceLow": "Bei ya chini",
@@ -117,7 +121,23 @@
     "loadingProperties": "Inapakia nyumba...",
     "errorLoading": "Kuna hitilafu katika kupakia nyumba",
     "tryAgainLater": "Tafadhali jaribu tena baadaye.",
-    "tryAgain": "Jaribu Tena"
+    "tryAgain": "Jaribu Tena",
+    "propertyType": "Aina ya Nyumba",
+    "allTypes": "Aina Zote",
+    "apartment": "Ghorofa",
+    "house": "Nyumba",
+    "studio": "Studio",
+    "room": "Chumba",
+    "villa": "Villa",
+    "commercial": "Biashara",
+    "bedrooms": "Vyumba vya Kulala",
+    "bathrooms": "Vyumba vya Kuogea",
+    "any": "Yoyote",
+    "bedroomPlus": "Chumba {{count}}+",
+    "bedroomsPlus": "Vyumba {{count}}+",
+    "bathroomPlus": "Choo {{count}}+",
+    "bathroomsPlus": "Vyoo {{count}}+",
+    "amenitiesServices": "Huduma na Vifaa"
   },
   "propertyCard": {
     "perMonth": "/mwezi",
@@ -161,14 +181,21 @@
       "house": "Nyumba",
       "room": "Chumba",
       "studio": "Studio",
-      "office": "Ofisi"
+      "office": "Ofisi",
+      "villa": "Villa",
+      "bedsitter": "Bedsitter",
+      "lodge": "Lodge",
+      "hotel": "Hoteli"
     },
     "amenities": {
       "electricity": "Umeme",
       "water": "Maji",
       "furnished": "Vifaa vya Nyumbani",
       "parking": "Parking",
-      "security": "Usalama"
+      "security": "Usalama",
+      "wifi": "WiFi",
+      "ac": "AC",
+      "tv": "TV"
     },
     "nearbyServices": {
       "school": "Shule",
@@ -176,6 +203,29 @@
       "market": "Soko",
       "bank": "Benki",
       "transport": "Usafiri"
+    },
+    "hostCard": {
+      "propertyHost": "Mwenye Nyumba",
+      "verified": "Imehakikiwa",
+      "memberSince": "Mjumbe Tangu",
+      "memberFor": "Mjumbe kwa {{unit}} {{count}}",
+      "year": "mwaka",
+      "years": "miaka",
+      "month": "mwezi",
+      "months": "miezi",
+      "newMember": "Mjumbe mpya",
+      "properties": "Nyumba",
+      "listing": "tangazo",
+      "listings": "matangazo",
+      "contactHost": "Wasiliana na Mwenyeji",
+      "responseTime": "Muda wa kujibu: Kawaida ndani ya masaa machache",
+      "chooseContact": "Chagua jinsi unavyotaka kuwasiliana na mwenyeji",
+      "call": "Piga Simu",
+      "whatsapp": "WhatsApp",
+      "noContact": "Maelezo ya mawasiliano hayajapatikana",
+      "checkLater": "Tafadhali angalia baadaye au wasiliana na msaada",
+      "safetyReminder": "Kikumbusho cha Usalama",
+      "neverSendMoney": "Usitume fedha kabla ya kuona nyumba mwenyewe"
     }
   },
   "auth": {
@@ -252,30 +302,6 @@
     "step1Description": "Jaza maelezo muhimu ya nyumba",
     "step2Title": "Maelezo ya Nyumba",
     "step2Description": "Elezea nyumba yako kwa undani",
-    "step3Title": "Anwani ya Nyumba",
-    "step3Description": "Anwani kamili ya nyumba",
-    "step4Title": "Picha za Nyumba",
-    "step4Description": "Picha za nyumba (za lazima)",
-    "step5Title": "Maelezo ya Mawasiliano",
-    "step5Description": "Maelezo ya mawasiliano",
-    "nameFilled": "Sawa! Jina limejazwa",
-    "locationFilled": "Eneo limejazwa",
-    "descriptionFilled": "Maelezo yamejazwa",
-    "phoneFilled": "Nambari ya simu imejazwa",
-    "addressImportance": "Kwa nini anwani kamili ni muhimu?",
-    "addressImportanceText": "Anwani kamili inasaidia wapangaji kukupata kwa urahisi na kuongeza imani katika matangazo yako.",
-    "photoTipsTitle": "Vidokezo vya Picha Nzuri",
-    "photoTip1": "• Piga picha za sebule, chumba cha kulala, na jiko",
-    "photoTip2": "• Hakikisha mwanga wa kutosha",
-    "photoTip3": "• Onyesha mazingira ya nje ya nyumba",
-    "photoTip4": "• Tumia picha za quality nzuri",
-    "photosRequired": "⚠️ Picha ni za lazima - ongeza angalau picha 3",
-    "contactInfoDescription": "Weka maelezo ya mawasiliano ili wapangaji waweze kuwasiliana nawe",
-    "descriptionPlaceholder": "Mfano: Nyumba hii ina vyumba 3 vya kulala, sebule kubwa, jiko la kisasa, na vyumba 2 vya kuogea. Iko eneo salama lenye ulinzi wa 24/7. Karibu na shule, hospitali, na soko. Ina umeme, maji ya bomba, na mahali pa kuegesha gari. Nyumba ni nzuri sana kwa familia au wafanyakazi.",
-    "step1Title": "Maelezo ya Msingi",
-    "step1Description": "Jaza maelezo muhimu ya nyumba yako",
-    "step2Title": "Maelezo ya Nyumba",
-    "step2Description": "Eleza nyumba yako kwa undani",
     "step3Title": "Anwani ya Nyumba",
     "step3Description": "Anwani kamili ya nyumba",
     "step4Title": "Picha za Nyumba",
@@ -397,37 +423,6 @@
     "add": "Ongeza",
     "viewAllProperties": "Tazama Nyumba Zote",
     "viewAllPropertiesDesc": "Angalia orodha kamili ya nyumba zako"
-  },
-  "footer": {
-    "description": "Jukwaa la kisasa la kutafuta na kukodia nyumba nchini Tanzania. Tunawachanganya wenye nyumba na wapangaji kwa urahisi na usalama.",
-    "location": "Dar es Salaam, Tanzania",
-    "importantPages": "Kurasa Muhimu",
-    "home": "Nyumbani",
-    "searchHouses": "Tafuta Nyumba",
-    "becomeLandlord": "Kuwa Mwenye Nyumba",
-    "dashboard": "Dashboard",
-    "supportLegal": "Msaada na Sheria",
-    "faq": "Maswali ya Kawaida",
-    "contactUs": "Wasiliana Nasi",
-    "privacyPolicy": "Sera za Faragha",
-    "termsOfUse": "Masharti ya Matumizi",
-    "safetyGuidelines": "Kanuni za Usalama",
-    "ourServices": "Huduma Zetu",
-    "easySearch": "Utafutaji wa nyumba kwa urahisi",
-    "directCommunication": "Mawasiliano ya moja kwa moja",
-    "highSecurity": "Usalama wa juu wa data",
-    "customerService": "Huduma ya wateja 24/7",
-    "modernFilters": "Vichujio vya kisasa",
-    "registeredHouses": "Nyumba Zilizosajiliwa",
-    "landlords": "Wenye Nyumba",
-    "cities": "Miji",
-    "users": "Watumiaji",
-    "rightsReserved": "Haki zote zimehifadhiwa.",
-    "createdWith": "Imetengenezwa na",
-    "poweredBy": "Powered by React & Supabase",
-    "madeWith": "Made with TypeScript",
-    "hostedOn": "Hosted on Lovable",
-    "aiDescription": "Programu hii imetengenezwa kwa teknolojia za kisasa za AI na imeundwa kwa ajili ya jamii ya Tanzania"
   },
   "about": {
     "title": "Kuhusu Nyumba Link",
