added similar properties section in a property details page

--- a/src/data/i18n/locales/en.json
+++ b/src/data/i18n/locales/en.json
@@ -227,6 +227,12 @@
       "safetyReminder": "Safety Reminder",
       "neverSendMoney": "Never send money before viewing the property in person"
     },
+    "similarProperties": {
+      "title": "Similar Properties",
+      "subtitle": "You might also be interested in these properties",
+      "perMonth": "per month",
+      "viewAll": "View All Properties"
+    },
     "bookingSuccess": "Booking request submitted successfully!"
   },
   "auth": {
