--- a/src/data/i18n/locales/sw.json
+++ b/src/data/i18n/locales/sw.json
@@ -1,9 +1,9 @@
 {
   "navigation": {
     "home": "Nyumbani",
-    "browse": "Tazama Nyumba",
+    "browse": "Nyumba",
     "about": "Kuhusu",
-    "dashboard": "Dashibodi",
+    "dashboard": "Mwenyeji",
     "signIn": "Ingia",
     "signUp": "Jisajili",
     "signOut": "Toka",
