redesigned filter sidebar for good ux

--- a/src/data/i18n/locales/en.json
+++ b/src/data/i18n/locales/en.json
@@ -130,6 +130,11 @@
     "room": "Room",
     "villa": "Villa",
     "commercial": "Commercial",
+    "bedsitter": "Bedsitter",
+    "lodge": "Lodge",
+    "hotel": "Hotel",
+    "hostel": "Hostel",
+    "office": "Office",
     "bedrooms": "Bedrooms",
     "bathrooms": "Bathrooms",
     "any": "Any",
@@ -183,6 +188,7 @@
       "studio": "Studio",
       "office": "Office",
       "villa": "Villa",
+      "commercial": "Commercial",
       "bedsitter": "Bedsitter",
       "lodge": "Lodge",
       "hotel": "Hotel",
@@ -373,6 +379,8 @@
     "room": "Room",
     "studio": "Studio",
     "office": "Office",
+    "villa": "Villa",
+    "commercial": "Commercial",
     "bedsitter": "Bedsitter",
     "lodge": "Lodge",
     "hotel": "Hotel",
