--- a/src/data/i18n/locales/sw.json
+++ b/src/data/i18n/locales/sw.json
@@ -130,6 +130,11 @@
     "room": "Chumba",
     "villa": "Villa",
     "commercial": "Biashara",
+    "bedsitter": "Bedsitter",
+    "lodge": "Lodge",
+    "hotel": "Hoteli",
+    "hostel": "Hosteli",
+    "office": "Ofisi",
     "bedrooms": "Vyumba vya Kulala",
     "bathrooms": "Vyumba vya Kuogea",
     "any": "Yoyote",
@@ -183,6 +188,7 @@
       "studio": "Studio",
       "office": "Ofisi",
       "villa": "Villa",
+      "commercial": "Biashara",
       "bedsitter": "Bedsitter",
       "lodge": "Lodge",
       "hotel": "Hoteli",
@@ -368,11 +374,13 @@
     "areaExample": "Mikocheni, Dar es Salaam",
     "propertyType": "Aina ya Nyumba",
     "selectPropertyType": "Chagua aina ya Mali",
-    "apartment": "Apartment",
+    "apartment": "Ghorofa",
     "house": "Nyumba",
     "room": "Chumba",
     "studio": "Studio",
     "office": "Ofisi",
+    "villa": "Villa",
+    "commercial": "Biashara",
     "bedsitter": "Bedsitter",
     "lodge": "Lodge",
     "hotel": "Hoteli",
